@@ -8,3 +8,5 @@ Makefile
 *.la
 *Debug*
 *Release*
+config.h
+config.h.in
